// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MavenInstallation groovy renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
   
  <code-instruction-stub
    class="gl-mb-5"
    copytext="Copy Gradle Groovy DSL install command"
    instruction="foo/gradle/groovy/install"
    label="Gradle Groovy DSL install command"
    trackingaction="copy_gradle_install_command"
    trackinglabel="code_instruction"
  />
   
  <code-instruction-stub
    copytext="Copy add Gradle Groovy DSL repository command"
    instruction="foo/gradle/groovy/add/source"
    label="Add Gradle Groovy DSL repository command"
    multiline="true"
    trackingaction="copy_gradle_add_to_source_command"
    trackinglabel="code_instruction"
  />
</div>
`;

exports[`MavenInstallation kotlin renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
   
  <code-instruction-stub
    class="gl-mb-5"
    copytext="Copy Gradle Kotlin DSL install command"
    instruction="foo/gradle/kotlin/install"
    label="Gradle Kotlin DSL install command"
    trackingaction="copy_kotlin_install_command"
    trackinglabel="code_instruction"
  />
   
  <code-instruction-stub
    copytext="Copy add Gradle Kotlin DSL repository command"
    instruction="foo/gradle/kotlin/add/source"
    label="Add Gradle Kotlin DSL repository command"
    multiline="true"
    trackingaction="copy_kotlin_add_to_source_command"
    trackinglabel="code_instruction"
  />
</div>
`;

exports[`MavenInstallation maven renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
   
  <p>
    <gl-sprintf-stub
      message="Copy and paste this inside your %{codeStart}pom.xml%{codeEnd} %{codeStart}dependencies%{codeEnd} block."
    />
  </p>
   
  <code-instruction-stub
    copytext="Copy Maven XML"
    instruction="foo/xml"
    label=""
    multiline="true"
    trackingaction="copy_maven_xml"
    trackinglabel="code_instruction"
  />
   
  <code-instruction-stub
    copytext="Copy Maven command"
    instruction="foo/command"
    label="Maven Command"
    trackingaction="copy_maven_command"
    trackinglabel="code_instruction"
  />
   
  <h3
    class="gl-font-lg"
  >
    Registry setup
  </h3>
   
  <p>
    <gl-sprintf-stub
      message="If you haven't already done so, you will need to add the below to your %{codeStart}pom.xml%{codeEnd} file."
    />
  </p>
   
  <code-instruction-stub
    copytext="Copy Maven registry XML"
    instruction="foo/setup"
    label=""
    multiline="true"
    trackingaction="copy_maven_setup_xml"
    trackinglabel="code_instruction"
  />
   
  <gl-sprintf-stub
    message="For more information on the Maven registry, %{linkStart}see the documentation%{linkEnd}."
  />
</div>
`;
